about-margin-fixed

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<!----start Section---->
 
 	<div class="start">
+
 		<nav>
 			<h2 class="logo">Portfo<span>lio</span></h2>
 			<ul>
@@ -25,19 +26,19 @@
 			</ul>
 		</nav>
 
+
 		<div class="content">
 			<h4>Hi, my name is</h4>
 			<h1 class="name">Muhtasim Mahmud.</h1>
-			<h1 class="P-for-I">I do programs for the internet.</h1>
-			<div class="paragraph">
-				
-			</div>
-			<p> I am a final year student of Computer Science and as well as a software developer.</p>
-			<p> Currently i am working with java spring boot and mysql database.</p>
-			<button> <a href=""> My youtube channel !</a></button>
-
-
+			<h1 class="P-for-I">I  build things for the web.</h1>
 			
+			<div class="paragraph">
+				<p> I am a final year student of Computer Science and as well as a software developer.</p>
+				<p> Currently i am working with java spring boot and mysql database.</p>
+			</div>
+
+			<button> <a href="" style="text-decoration: none; color: #64ffda;"> My youtube channel !</a></button>
+
 		</div>
 	</div>
 
