--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
 
 		<div class="content">
 			<h4>Hi, my name is</h4>
-			<h1 class="name">Muhtasim Mahmud.</h1>
-			<h1 class="P-for-I">I  build things for the web.</h1>
+			<h3 class="name">Muhtasim Mahmud.</h3>
+			<h3>I  build things for the web.</h3>
 			
 			<div class="paragraph">
-				<p> I am a final year student of Computer Science and as well as a software developer.</p>
-				<p> Currently i am working with java spring boot and mysql database.</p>
+				<p> I am a final year student of Computer Science at Brac University and </p>
+				<p> also i'm a software developer who loves to solve programming problems.</p>
+				<p> Cureently i am working with java <span class="spacial-color">spring boot.</span></p>
 			</div>
 
 			<button> <a href="" style="text-decoration: none; color: #64ffda;"> My youtube channel !</a></button>
