--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<div class="start">
 
 		<nav>
-			<h2 class="logo"><span></span></h2> <!-- eikhane span er vhitore portfolio likha chilo. just likha ta kete disi. but h2 tag ta rakhsi alignment thik rakhar jnno-->
+			<h2 class="logo">Portfo<span>lio</span></h2>
 			<ul>
 				<li> <span class="num">01. </span> <a href="#"> Home</a></li>
 				<li> <span class="num">02. </span> <a href="#"> About Us</a></li>
@@ -56,7 +56,7 @@
 				<button type="button">Let's Talk</button>
 			</div>
 
-			<img src="img/main-img.png">
+			<img src="images/mahmud2.jpg">
 
 		</div>
 	</section>
