--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 	<div class="start">
 
 		<nav>
-			<h2 class="logo">Portfo<span>lio</span></h2>
+			<h2 style="color: white;">Portfo<span style="color: #f9004d;">lio</span></h2>
 			<ul>
 				<li> <span class="num">01. </span> <a href="#"> Home</a></li>
-				<li> <span class="num">02. </span> <a href="#"> About Us</a></li>
+				<li> <span class="num">02. </span> <a href="#"> About</a></li>
 				<li> <span class="num">03. </span> <a href="#"> Services</a></li>
 				<li> <span class="num">04. </span> <a href="#"> Skills</a></li>
 				<li> <span class="num">05. </span> <a href="#"> Contact Us</a></li>
@@ -47,19 +47,29 @@
 
 	<!----About section start---->
 	<section class="about">
+
 		<div class="main">
 			
 			<div class="about-text">
-				<h2>About Me</h2>
-				<h5>Developer <span>& Designer</span></h5>
-				<p>I am a front-end web developer. I can provide clean code and pixel perfect design. I also make the website more & more interactive with web animations.I can provide clean code and pixel perfect design. I also make the website more & more interactive with web animations.A responsive design makes your website accessible to all users, regardless of their device.</p>
-				<button type="button">Let's Talk</button>
+				<h4> <span class="num" id="abt-num">02. </span> About Me</h4>
+				<div class="paragraph" id="abt-paragraph">
+					<p style="margin-bottom: 70px;"> Hello, My name is Muhtasim Mahmud. I am a pursuing my Bechelor degree in Computer Science and i'm in my last semester. Hopefully i will be done
+						with the degree in this December,2022. I have started programming with java back in 2019 and got so much attached with the interesting aspects of programming. 
+					</p>
+					<p style="margin-top: 25px;"> Then, I've learnt to develop <span class="spacial-color"> Android applications</span> and develop some with java native. Also I've developed some small <span class="spacial-color"> Desktop application.</span> 
+						Finally, i got so attracted with <span class="spacial-color"> Web application</span> development and now i build web application with java <span class="spacial-color"> Spring boot. </span>
+					</p>	
+					
+				</div>
 			</div>
 
-			<img src="images/mahmud2.jpg">
-
+			<div class="about-img">
+				<img src="images/mahmud2.jpg">
+			</div>
 		</div>
 	</section>
+
+
 
 	<!-----service section start----------->
 	<div class="service">
