--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		<div class="main">
 			
 			<div class="about-text">
-				<h4> <span class="num" id="abt-num">02. </span> About Me</h4>
+				<h4> <span class="num" id="abt-num">02. </span> About Me ________________</h4>
 				<div class="paragraph" id="abt-paragraph">
 					<p style="margin-bottom: 70px;"> Hello, My name is Muhtasim Mahmud. I am a pursuing my Bechelor degree in Computer Science and i'm in my last semester. Hopefully i will be done
 						with the degree in this December,2022. I have started programming with java back in 2019 and got so much attached with the interesting aspects of programming. 
@@ -67,7 +67,53 @@
 				<img src="images/mahmud2.jpg">
 			</div>
 		</div>
+
 	</section>
+
+	<!-- Education section start -->
+
+	<section class="Education">
+		
+		<div class="main">
+			
+			<div class="about-text">
+				<h4> <span class="num" id="abt-num">03. </span> Education ________________</h4>
+				<div class="paragraph" id="abt-paragraph">
+					
+					<p><span class="spacial-color"> ▹ </span>Brac University         <span style="margin-left: 150px;"> - January,2019 - Present</span>  </p>
+					<p><span class="spacial-color"> ▹ </span>Anandamohan College     <span style="margin-left:  85px;"> - 2011 - 2016</span> </p>
+					<p><span class="spacial-color"> ▹ </span>Mymensingh Zilla School <span style="margin-left:  70px;"> - 2016 - 2018</span> </p>
+					</p>
+				</div>
+			</div>
+
+		</div>
+
+	</section>
+
+
+	<!-- Skill section start -->
+
+	<section class="skill">
+		
+		<div class="main">
+			
+			<div class="about-text">
+				<h4> <span class="num" id="abt-num">03. </span> Skills ________________</h4>
+				<div class="paragraph" id="abt-paragraph">
+					
+					<p><span class="spacial-color"> ▹ </span>HTML5, CSS, Bootstrap, JavaScript.</p>
+					<p><span class="spacial-color"> ▹ </span>Java (SpringBoot),  MySQL, Firebase.</p>
+					<p><span class="spacial-color"> ▹ </span>Java, C, C++,  JavaScript, Python.</p>
+					<p><span class="spacial-color"> ▹ </span>Problem Solving, OOP,Web, Desktop and Android application dev.
+					</p>
+				</div>
+			</div>
+
+		</div>
+
+	</section>
+
 
 
 
