--- a/index.html
+++ b/index.html
@@ -18,16 +18,17 @@
 		<nav>
 			<h2 style="color: white;">Portfo<span style="color: #f9004d;">lio</span></h2>
 			<ul>
-				<li> <span class="num">01. </span> <a href="#"> Home</a></li>
-				<li> <span class="num">02. </span> <a href="#"> About</a></li>
-				<li> <span class="num">03. </span> <a href="#"> Services</a></li>
-				<li> <span class="num">04. </span> <a href="#"> Skills</a></li>
-				<li> <span class="num">05. </span> <a href="#"> Contact Us</a></li>
+				<li> <span class="num">01. </span> <a href="#Home_section"> Home</a></li>
+				<li> <span class="num">02. </span> <a href="#About_section"> About</a></li>
+				<li> <span class="num">03. </span> <a href="#Education_section"> Education</a></li>
+				<li> <span class="num">04. </span> <a href="#Skill_section"> Skills</a></li>
+				<li> <span class="num">05. </span> <a href="#Project_section"> Projects</a></li>
+				<li> <span class="num">06. </span> <a href="#"> Hobby</a></li>  <!--Eikhane onno page er link diboe. hoddy page banaya ota dibe. oikhane table use korbo-->
 			</ul>
 		</nav>
 
 
-		<div class="content">
+		<div class="content" id="Home_section">
 			<h4>Hi, my name is</h4>
 			<h3 class="name">Muhtasim Mahmud.</h3>
 			<h3>I  build things for the web.</h3>
@@ -46,7 +47,7 @@
 
 
 	<!----About section start---->
-	<section class="about">
+	<section class="about" id="About_section">
 
 		<div class="main">
 			
@@ -72,7 +73,7 @@
 
 	<!-- Education section start -->
 
-	<section class="Education">
+	<section class="Education" id="Education_section">
 		
 		<div class="main">
 			
@@ -94,12 +95,12 @@
 
 	<!-- Skill section start -->
 
-	<section class="skill">
+	<section class="skill" id="Skill_section">
 		
 		<div class="main">
 			
 			<div class="about-text">
-				<h4> <span class="num" id="abt-num">03. </span> Skills ________________</h4>
+				<h4> <span class="num" id="abt-num">04. </span> Skills ________________</h4>
 				<div class="paragraph" id="abt-paragraph">
 					
 					<p><span class="spacial-color"> ▹ </span>HTML5, CSS, Bootstrap, JavaScript.</p>
@@ -117,16 +118,16 @@
 
 
 
-	<!-----service section start----------->
+	<!-----Project section start----------->
 	<div class="service">
 		<div class="title">
-			<h2>Our Services</h2>
+			<h2><span class="spacial-color">05. </span>  Projects</h2>
 		</div>
 
 		<div class="box">
 			<div class="card">
 				<i class="fas fa-bars"></i>
-				<h5>Web Development</h5>
+				<h5>Vhangi Chai</h5>
 				<div class="pra">
 					<p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
 
@@ -138,7 +139,7 @@
 
 			<div class="card">
 				<i class="far fa-user"></i>
-				<h5>Web Development</h5>
+				<h5>Student Adising</h5>
 				<div class="pra">
 					<p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
 
@@ -150,7 +151,7 @@
 
 			<div class="card">
 				<i class="far fa-bell"></i>
-				<h5>Web Development</h5>
+				<h5>Food Delivery app</h5>
 				<div class="pra">
 					<p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
 
@@ -162,16 +163,10 @@
 		</div>
 	</div>
 
-	<!------Contact Me------>
-	<div class="contact-me">
-		<p>Let Me Get You A Beautiful Website.</p>
-		<a class="button-two" href="#">Hire Me</a>
-	</div>
 
 	<!------footer start--------->
 	<footer>
-		<p>Tahmid Ahmed</p>
-		<p>For more HTML, CSS, and coding tutorial - please click on the link below to subscribe to my channel:</p>
+		<p>Muhtasim Mahmud</p>
 		<div class="social">
 			<a href="#"><i class="fab fa-facebook-f"></i></a>
 			<a href="#"><i class="fab fa-instagram"></i></a>
