updated from mac

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 					<p><span class="spacial-color"> ▹ </span>HTML5, CSS, Bootstrap, JavaScript.</p>
 					<p><span class="spacial-color"> ▹ </span>Java (SpringBoot),  MySQL, Firebase.</p>
 					<p><span class="spacial-color"> ▹ </span>Java, C, C++,  JavaScript, Python.</p>
-					<p><span class="spacial-color"> ▹ </span>Problem Solving, OOP,Web, Desktop and Android application dev.
+					<p><span class="spacial-color"> ▹ </span>Problem Solving, OOP,Web, Desktop & Android application dev.
 					</p>
 				</div>
 			</div>
