--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<p> Cureently i am working with java <span class="spacial-color">spring boot.</span></p>
 			</div>
 
-			<button> <a href="" style="text-decoration: none; color: #64ffda;"> My youtube channel !</a></button>
+			<button> <a href="https://www.youtube.com/channel/UCXImluejkEkr8kzeEfMztoQ" target="_blank" style="text-decoration: none; color: #64ffda;"> My youtube channel !</a></button>
 
 		</div>
 	</div>
@@ -81,9 +81,9 @@
 				<h4> <span class="num" id="abt-num">03. </span> Education ________________</h4>
 				<div class="paragraph" id="abt-paragraph">
 					
-					<p><span class="spacial-color"> ▹ </span>Brac University         <span style="margin-left: 150px;"> - January,2019 - Present</span>  </p>
-					<p><span class="spacial-color"> ▹ </span>Anandamohan College     <span style="margin-left:  85px;"> - 2011 - 2016</span> </p>
-					<p><span class="spacial-color"> ▹ </span>Mymensingh Zilla School <span style="margin-left:  70px;"> - 2016 - 2018</span> </p>
+					<p><span class="spacial-color"> ▹  </span> <span class="institution">   <a href="https://www.bracu.ac.bd/"> Brac University        </a> </span> <span style="margin-left: 150px;"> - January,2019 - Present</span>  </p>
+					<p><span class="spacial-color"> ▹  </span> <span class="institution">   <a href="http://anandamohangovtcollege.edu.bd/"> Anandamohan College    </a> </span> <span style="margin-left:  85px;"> - 2011 - 2016</span> </p>
+					<p><span class="spacial-color"> ▹  </span> <span class="institution">   <a href="http://www.mzs.edu.bd/"> Mymensingh Zilla School</a> </span> <span style="margin-left:  70px;"> - 2016 - 2018</span> </p>
 					</p>
 				</div>
 			</div>
@@ -168,11 +168,11 @@
 	<footer>
 		<p>Muhtasim Mahmud</p>
 		<div class="social">
-			<a href="#"><i class="fab fa-facebook-f"></i></a>
-			<a href="#"><i class="fab fa-instagram"></i></a>
-			<a href="#"><i class="fab fa-dribbble"></i></a>
+			<a href="https://www.facebook.com/muhtasim.mahmud.54/"><i class="fab fa-facebook-f"></i></a>
+			<a href="https://www.instagram.com/muhtasim_mahmud/"><i class="fab fa-instagram"></i></a>
+			<a href=""> <i class="fab fa-linkedin"></i> </a>
 		</div>
-		<p class="end">CopyRight By Tahmid Ahmed</p>
+		<p class="end">@All Right reserved.</p>
 	</footer>
 </body>
 </html>
