--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<li> <span class="num">03. </span> <a href="#Education_section"> Education</a></li>
 				<li> <span class="num">04. </span> <a href="#Skill_section"> Skills</a></li>
 				<li> <span class="num">05. </span> <a href="#Project_section"> Projects</a></li>
-				<li> <span class="num">06. </span> <a href="#"> Hobby</a></li>  <!--Eikhane onno page er link diboe. hoddy page banaya ota dibe. oikhane table use korbo-->
+				<li> <span class="num">06. </span> <a href="info.html"> Hobby</a></li>  <!--Eikhane onno page er link diboe. hoddy page banaya ota dibe. oikhane table use korbo-->
 			</ul>
 		</nav>
 
