updated info page

--- a/info.html
+++ b/info.html
@@ -12,9 +12,8 @@
 
     <body>
 
-        <h2 ><i>Personal Information</i></h2>
-
-        <div class="pf" >
+        <h2 >Personal Information</h2>
+        <div class="info" >
 
             <table>
                 <tr>
@@ -50,20 +49,20 @@
         </div>
 
     
-        <h2><i>Hobbies</i></h2>
-
+        
         <div class="hobbies">
+            <h2> Hobbies </h2>
             <ul>
-                <li>God of War</li>
-                <li>Forza Horizon</li>
-                <li>Gta 5</li>
-                <li>Valorant</li>
-                <li>Need for Speed Most Wanted</li>
+                <li>Programming</li>
+                <li>Wathcing movies</li>
+                <li>Playing cricket</li>
+                <li>Tour</li>
             </ul>
         </div>
 
+
         <div class="fav-quote">
-            <h4> Favourite quote : </h4>
+            <h2> Favourite quote </h2>
         </div>
 
     </body>
