--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 				<li> <span class="num">02. </span> <a href="#About_section"> About</a></li>
 				<li> <span class="num">03. </span> <a href="#Education_section"> Education</a></li>
 				<li> <span class="num">04. </span> <a href="#Skill_section"> Skills</a></li>
-				<li> <span class="num">05. </span> <a href="#Project_section"> Projects</a></li>
-				<li> <span class="num">06. </span> <a href="info.html"> Hobby</a></li>  <!--Eikhane onno page er link diboe. hoddy page banaya ota dibe. oikhane table use korbo-->
+				<li> <span class="num">05. </span> <a href="info.html" target="_blank"> Info</a></li> 
 			</ul>
 		</nav>
 
@@ -81,9 +80,9 @@
 				<h4> <span class="num" id="abt-num">03. </span> Education ________________</h4>
 				<div class="paragraph" id="abt-paragraph">
 					
-					<p><span class="spacial-color"> ▹  </span> <span class="institution">   <a href="https://www.bracu.ac.bd/"> Brac University        </a> </span> <span style="margin-left: 150px;"> - January,2019 - Present</span>  </p>
-					<p><span class="spacial-color"> ▹  </span> <span class="institution">   <a href="http://anandamohangovtcollege.edu.bd/"> Anandamohan College    </a> </span> <span style="margin-left:  85px;"> - 2011 - 2016</span> </p>
-					<p><span class="spacial-color"> ▹  </span> <span class="institution">   <a href="http://www.mzs.edu.bd/"> Mymensingh Zilla School</a> </span> <span style="margin-left:  70px;"> - 2016 - 2018</span> </p>
+					<p><span class="spacial-color"> ▹  </span> <span class="institution">   <a href="https://www.bracu.ac.bd/" target="_blank"> Brac University        </a> </span> <span style="margin-left: 150px;"> - January,2019 - Present</span>  </p>
+					<p><span class="spacial-color"> ▹  </span> <span class="institution">   <a href="http://anandamohangovtcollege.edu.bd/" target="_blank"> Anandamohan College    </a> </span> <span style="margin-left:  85px;"> - 2011 - 2016</span> </p>
+					<p><span class="spacial-color"> ▹  </span> <span class="institution">   <a href="http://www.mzs.edu.bd/" target="_blank"> Mymensingh Zilla School</a> </span> <span style="margin-left:  70px;"> - 2016 - 2018</span> </p>
 					</p>
 				</div>
 			</div>
@@ -117,13 +116,12 @@
 
 	<!------footer start--------->
 	<footer>
-		<p>Muhtasim Mahmud</p>
+		<p class="name">Muhtasim Mahmud</p>
 		<div class="social">
-			<a href="https://www.facebook.com/muhtasim.mahmud.54/"><i class="fab fa-facebook-f"></i></a>
-			<a href="https://www.instagram.com/muhtasim_mahmud/"><i class="fab fa-instagram"></i></a>
-			<a href=""> <i class="fab fa-linkedin"></i> </a>
+			<a href="https://www.facebook.com/muhtasim.mahmud.54/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+			<a href="https://www.instagram.com/muhtasim_mahmud/" target="_blank"><i class="fab fa-instagram"></i></a>
+			<a href="https://www.linkedin.com/in/muhtasim-mahmud-493a571a4/" target="_blank"> <i class="fab fa-linkedin"></i> </a>
 		</div>
-		<p class="end">@All Right reserved.</p>
 	</footer>
 </body>
 </html>
