--- a/info.html
+++ b/info.html
@@ -58,6 +58,9 @@
         
         <div class="hobbies">
             <h2> Hobbies </h2>
+            
+            <img src="https://thumbs.dreamstime.com/b/hobbies-leisure-lifestyle-pastime-fun-concept-85089069.jpg" alt="">
+
             <ul>
                 <li>Programming</li>
                 <li>Wathcing movies</li>
